<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_vector"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/go_home"
        android:icon="@drawable/ic_home_vector"
        android:title="@string/go_to_home_folder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/go_to_favorite"
        android:icon="@drawable/ic_star_on_vector"
        android:title="@string/go_to_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_vector"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toggle_grid_view"
        android:title="@string/view_as_grid"
        app:showAsAction="never" />
    <item
        android:id="@+id/toggle_hidden_files"
        android:title="@string/show_hidden_files"
        app:showAsAction="never" />
    <item
        android:id="@+id/toggle_dual_pane"
        android:title="@string/dual_pane_on"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_trash"
        android:title="@string/trash_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_recent"
        android:title="@string/recent_files_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/storage_analyzer"
        android:title="@string/storage_analyzer_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/free_space"
        android:title="@string/free_space_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_favorite"
        android:icon="@drawable/ic_star_off_outline_vector"
        android:title="@string/add_to_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/remove_favorite"
        android:icon="@drawable/ic_star_off_vector"
        android:title="@string/remove_from_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/set_as_home"
        android:title="@string/set_as_home_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/intro"
        android:title="@string/introduction"
        app:showAsAction="never" />
    <item
        android:id="@+id/tutorial"
        android:title="@string/tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
