<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/AppIntroLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            style="@style/AppIntroDefaultHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary_text"
            style="@style/AppIntroIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_summary"
            app:drawableStartCompat="@drawable/ic_lock_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/summary2_text"
            style="@style/AppIntroIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_summary2"
            app:drawableStartCompat="@drawable/ic_lock_open_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary_text" />

        <TextView
            android:id="@+id/info_text_1"
            style="@style/AppIntroInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_info_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summary2_text" />

        <TextView
            android:id="@+id/info_text_2"
            style="@style/AppIntroInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_info_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text_1" />

        <TextView
            android:id="@+id/warning_text"
            style="@style/AppIntroDangerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_encrypting_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text_2" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/configure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:contentDescription="@string/intro_configure"
            android:text="@string/intro_configure"
            app:icon="@drawable/ic_settings_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warning_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
