<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/summary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigger_text_size" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/normal_margin"
        android:indeterminate="true"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrypt_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/legacy_migration_decrypt_all" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/encrypt_with_okc_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legacy_migration_encrypt_okc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_remaining_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/legacy_migration_delete_remaining" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/empty_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:gravity="center"
        android:text="@string/legacy_migration_empty"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/legacy_aes_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_weight="1"
        android:clipToPadding="false" />

</LinearLayout>
