<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/free_space_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/free_space_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/free_space_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/free_space_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/free_space_summary"
            style="@style/M3.BodySecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_margin"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/free_space_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/activity_margin"
            android:text="@string/free_space_empty"
            android:visibility="gone" />

        <ltechnologies.onionphone.securefilemanager.views.MyRecyclerView
            android:id="@+id/free_space_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="ltechnologies.onionphone.securefilemanager.views.MyLinearLayoutManager" />

    </LinearLayout>

</LinearLayout>
