<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authenticate_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.App.ListCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/big_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:minWidth="280dp"
            android:orientation="vertical"
            android:padding="@dimen/big_margin">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/prompt_info_title"
                android:src="@drawable/ic_lock_open_vector_big"
                app:tint="?attr/colorPrimary" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/prompt_info_title"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authenticate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin"
                android:contentDescription="@string/authenticate"
                android:text="@string/authenticate"
                app:icon="@drawable/ic_lock_open_vector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/authenticate_password_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:contentDescription="@string/prompt_info_use_app_password"
                android:text="@string/prompt_info_use_app_password"
                android:visibility="gone" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
